--- a/index.html
+++ b/index.html
@@ -1,100 +1,147 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treino da Semana</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        table {
-            width: 90%;
-            margin: 20px auto;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-        }
-        th {
-            background-color: #333;
-            color: white;
-        }
-        td {
-            text-align: left;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Treino da Semana</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #f1f8e9);
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #00796b;
+    }
+
+    table {
+      width: 95%;
+      margin: 0 auto;
+      border-collapse: collapse;
+      background-color: #fff;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    th, td {
+      padding: 12px 15px;
+      border: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #00796b;
+      color: #fff;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 0.9em;
+    }
+
+    td {
+      background-color: #fafafa;
+    }
+
+    tr:nth-child(even) td {
+      background-color: #f1f1f1;
+    }
+
+    td:first-child, th:first-child {
+      border-left: none;
+    }
+
+    td:last-child, th:last-child {
+      border-right: none;
+    }
+
+    table tr:last-child td {
+      border-bottom: none;
+    }
+
+    @media screen and (max-width: 768px) {
+      table {
+        font-size: 0.85em;
+      }
+
+      h2 {
+        font-size: 1.5em;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h2>Plano de Treino Semanal</h2>
-    <table>
-        <tr>
-            <th>Segunda (Costas/Bíceps/Abs)</th>
-            <th>Terça (Peito/Ombro/Tríceps)</th>
-            <th>Quarta (Inferior)</th>
-            <th>Quinta (Rest Day)</th>
-            <th>Sexta (Upper Body)</th>
-        </tr>
-        <tr>
-            <td>Manguito Rotador Interno - 1x15seg</td>
-            <td>Manguito Rotador Interno - 1x15seg</td>
-            <td>Cadeira Adutora - 3xPF/PF/FT</td>
-            <td>Panturrilha Sentado na Máquina - 3xPF/PF/FT</td>
-            <td>Manguito Rotador Interno - 1x15seg</td>
-        </tr>
-        <tr>
-            <td>Manguito Rotador Externo - 2x10</td>
-            <td>Manguito Rotador Externo - 2x10</td>
-            <td>Leg Press 45° - 4xAQ/PF/PF/FT</td>
-            <td>Tríceps Supino Fechado com Halter - 3xPF/PF/FT</td>
-            <td>Manguito Rotador Externo - 2x10</td>
-        </tr>
-        <tr>
-            <td>Remada no Banco Inclinado - 5xAQ/PF/PF/FT</td>
-            <td>Supino Reto Máquina ou Halter - 4xAQ/FT/FT/PF</td>
-            <td>Cadeira Flexora Posterior - 4xPF/PF/PF/FT</td>
-            <td>Rosca Direta na Polia Baixa com Corda - 3xPF/PF/FT</td>
-            <td>Supino Inclinado com Halter - 4xAQ/PF/PF/FT</td>
-        </tr>
-        <tr>
-            <td>Puxada Neutra com Triângulo - 4xPREP/PF/PF/FT</td>
-            <td>Crucifixo Máquina - 4xPREP/PF/PF/FT</td>
-            <td>Agachamento no Smith - 3xPF/PF/FT</td>
-            <td>Rosca Scott Máquina - 3xPF/PF/FT</td>
-            <td>Supino Reto - 2xPF/FT</td>
-        </tr>
-        <tr>
-            <td>Remada Serrote com Halter - 3xPF/PF/FT</td>
-            <td>Supino Declinado Máquina ou Cross - 3xPF/PF/FT</td>
-            <td>Cadeira Extensora Unilateral - 3xPF/PF/FT</td>
-            <td>Tríceps na Polia com Barra V/W - 3xPF/PF/FT</td>
-            <td>Puxada Aberta com Barra Reta - 4xPREP/PF/PF/FT</td>
-        </tr>
-        <tr>
-            <td>Crucifixo Inverso Máquina - 3xPF/PF/FT</td>
-            <td>Elevação Lateral com Halter - 3xPF/PF/FT</td>
-            <td>Abdominal como preferir</td>
-            <td>Rosca Inversa na Polia Baixa - 3xPF/PF/FT</td>
-            <td>Desenvolvimento Máquina ou Banco com Halter - 3xPF/PF/FT</td>
-        </tr>
-        <tr>
-            <td>Rosca Bíceps no Banco Inclinado - 3xPF/PF/FT</td>
-            <td>Tríceps Testa na Polia</td>
-            <td>-</td>
-            <td>-</td>
-            <td>Elevação Lateral Unilateral na Polia - 3xPF/PF/FT</td>
-        </tr>
-        <tr>
-            <td>Abdominal como preferir - 3x até a falha</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>Abdominal Prancha Isométrica - 3x até a falha</td>
-        </tr>
-    </table>
+  <h2>Plano de Treino Semanal</h2>
+  <table>
+    <tr>
+      <th>Segunda (Costas/Bíceps/Abs)</th>
+      <th>Terça (Peito/Ombro/Tríceps)</th>
+      <th>Quarta (Inferior)</th>
+      <th>Quinta (Rest Day)</th>
+      <th>Sexta (Upper Body)</th>
+    </tr>
+    <tr>
+      <td>Manguito Rotador Interno - 1x15seg</td>
+      <td>Manguito Rotador Interno - 1x15seg</td>
+      <td>Cadeira Adutora - 3xPF/PF/FT</td>
+      <td>Panturrilha Sentado na Máquina - 3xPF/PF/FT</td>
+      <td>Manguito Rotador Interno - 1x15seg</td>
+    </tr>
+    <tr>
+      <td>Manguito Rotador Externo - 2x10</td>
+      <td>Manguito Rotador Externo - 2x10</td>
+      <td>Leg Press 45° - 4xAQ/PF/PF/FT</td>
+      <td>Tríceps Supino Fechado com Halter - 3xPF/PF/FT</td>
+      <td>Manguito Rotador Externo - 2x10</td>
+    </tr>
+    <tr>
+      <td>Remada no Banco Inclinado - 5xAQ/PF/PF/FT</td>
+      <td>Supino Reto Máquina ou Halter - 4xAQ/FT/FT/PF</td>
+      <td>Cadeira Flexora Posterior - 4xPF/PF/PF/FT</td>
+      <td>Rosca Direta na Polia Baixa com Corda - 3xPF/PF/FT</td>
+      <td>Supino Inclinado com Halter - 4xAQ/PF/PF/FT</td>
+    </tr>
+    <tr>
+      <td>Puxada Neutra com Triângulo - 4xPREP/PF/PF/FT</td>
+      <td>Crucifixo Máquina - 4xPREP/PF/PF/FT</td>
+      <td>Agachamento no Smith - 3xPF/PF/FT</td>
+      <td>Rosca Scott Máquina - 3xPF/PF/FT</td>
+      <td>Supino Reto - 2xPF/FT</td>
+    </tr>
+    <tr>
+      <td>Remada Serrote com Halter - 3xPF/PF/FT</td>
+      <td>Supino Declinado Máquina ou Cross - 3xPF/PF/FT</td>
+      <td>Cadeira Extensora Unilateral - 3xPF/PF/FT</td>
+      <td>Tríceps na Polia com Barra V/W - 3xPF/PF/FT</td>
+      <td>Puxada Aberta com Barra Reta - 4xPREP/PF/PF/FT</td>
+    </tr>
+    <tr>
+      <td>Crucifixo Inverso Máquina - 3xPF/PF/FT</td>
+      <td>Elevação Lateral com Halter - 3xPF/PF/FT</td>
+      <td>Abdominal como preferir</td>
+      <td>Rosca Inversa na Polia Baixa - 3xPF/PF/FT</td>
+      <td>Desenvolvimento Máquina ou Banco com Halter - 3xPF/PF/FT</td>
+    </tr>
+    <tr>
+      <td>Rosca Bíceps no Banco Inclinado - 3xPF/PF/FT</td>
+      <td>Tríceps Testa na Polia</td>
+      <td>-</td>
+      <td>-</td>
+      <td>Elevação Lateral Unilateral na Polia - 3xPF/PF/FT</td>
+    </tr>
+    <tr>
+      <td>Abdominal como preferir - 3x até a falha</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
+      <td>Abdominal Prancha Isométrica - 3x até a falha</td>
+    </tr>
+  </table>
 </body>
 </html>
